Change the index.html and index.css

--- a/index.css
+++ b/index.css
@@ -3,15 +3,19 @@
     display: flex;
     align-items: center;
     padding: 10px;
-    border: 5px solid aqua;
     margin: 5px;
+    background-color: blueviolet;
 }
 
 .container{
     display: flex;
     flex-direction: column;
-    background-color: rgba(170, 235, 243, 0.555);
+    background-color: rgb(228, 232, 245);
     height: 100%;
+}
+
+.title{
+    
 }
 
 html, body {
@@ -31,4 +35,10 @@ html, body {
 .description{
 
 
+}
+
+.linkHub{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
 }
